--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "good-reporter": "^2.0.0",
     "hoek": "^2.5.1",
+    "json-stringify-safe": "^5.0.0",
     "wreck": "^5.0.1"
   },
   "devDependencies": {},
