--- a/package.json
+++ b/package.json
@@ -28,5 +28,16 @@
     "reporter"
   ],
   "author": "Erik Toth <totherik@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/totherik/good-influxdb.git"
+  },
+  "bugs": {
+    "url": "https://github.com/totherik/good-influxdb/issues"
+  },
+  "homepage": "https://github.com/totherik/good-influxdb"
 }
