--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,13 @@
 {
+    "extends": "eslint:recommended",
     "env": {
         "browser": false,
-        "node": true
+        "node": true,
+        "es6": true
     },
     "rules": {
         "quotes": [1, "single"],
-        "no-underscore-dangle": false,
-        "new-cap": false
+        "no-underscore-dangle": 0,
+        "new-cap": 0
     }
 }
