--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "An InfluxDB good reporter.",
   "main": "index.js",
   "dependencies": {
-    "fastpath": "^2.1.0",
-    "hoek": "^4.1.0",
-    "json-stringify-safe": "^5.0.1",
-    "wreck": "^10.0.0"
+    "fastpath": "2.1.0",
+    "@hapi/hoek": "8.1.0",
+    "json-stringify-safe": "5.0.1",
+    "@hapi/wreck": "15.0.1"
   },
   "devDependencies": {
-    "code": "^4.0.0",
-    "eslint": "^3.12.2",
-    "hapi": "^16.0.2",
-    "lab": "^11.2.1"
+    "@hapi/code": "6.0.0",
+    "eslint": "6.1.0",
+    "@hapi/hapi": "18.3.1",
+    "@hapi/lab": "19.1.0"
   },
   "scripts": {
     "test": "lab",
